--- a/resources/panel/export.html
+++ b/resources/panel/export.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Choose artboards - Sketch MeaXure</title>
+    <title>Choose artboards - Wudi Export</title>
 
     <link href="assets/css/normalize.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
@@ -193,14 +193,14 @@
                     //export influence rect option
                     '<div class="item" style="margin-top:10px;">',
                     '<div class="reversebox">',
-                    '<div class="radiobox positive-radio" title="设计稿尺寸为3x">',
+                    '<!-- div class="radiobox positive-radio" title="设计稿尺寸为3x">',
                     '<input id="positive" type="radio" name="reverse" value="3">',
                     '<label for="positive">3X</label>',
                     '</div>',
                     '<div class="radiobox reverse-radio" title="设计稿尺寸为1x">',
                     '<input id="reverse" type="radio" name="reverse" value="1">',
                     '<label for="reverse">1X</label>',
-                    '</div>',
+                    '</div -->',
                     '</div>',
                     '<label>',
                     '<div class="checkbox">',
